[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Turret.gd" type="Script" id=1]
[ext_resource path="res://Scenes/BulletLinear.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/TURRET SPRITESHEET.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 300.0

[sub_resource type="Animation" id=3]

resource_name = "rightStartup"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[node name="Turret" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 16
collision_mask = 3
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "collision" ]
detect_radius = 300
fire_rate = 1.0
firstShotDelay = 0
Bullet = ExtResource( 2 )
bulletSpeed = 1
rotatingTurret = true
usesTargeting = true
fireType = "singleFire"
shotgunBulletAmount = 3
shotgunSpread = 20
bulletRotationSpeed = 1.0
bulletConeDegrees = 40.0
bulletDecayTime = 10.0
angleBulletUpdateDelay = 1.0
trackingDelayTime = 0.25
rotationSpeed = 0.0
defeated = false

[node name="Sprite" type="Sprite" parent="." index="0"]

modulate = Color( 1, 0.796875, 0, 1 )
texture = ExtResource( 3 )
vframes = 8
hframes = 5
_sections_unfolded = [ "Animation", "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="Visibility" type="Area2D" parent="." index="2"]

visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 16
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visibility" index="0"]

shape = SubResource( 2 )

[node name="ShootTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="animationPlayer" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/rightStartup = SubResource( 3 )
blend_times = [  ]

[connection signal="body_entered" from="Visibility" to="." method="_on_Visibility_body_entered"]

[connection signal="body_exited" from="Visibility" to="." method="_on_Visibility_body_exited"]


